--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,10 +14,10 @@
    <children>
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="51.99998779296875" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="166.40001220703124" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="102.4000244140625" minWidth="10.0" prefWidth="70.4000244140625" />
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="159.19997558593747" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.19994354248047" minWidth="10.0" prefWidth="57.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="184.80005645751953" minWidth="10.0" prefWidth="150.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="10.0" prefWidth="125.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="161.5999755859375" minWidth="10.0" prefWidth="118.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -60,17 +59,12 @@
                   <Font name="Book Antiqua" size="14.0" />
                </font>
             </Label>
-            <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" text="Add" GridPane.columnIndex="2" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Book Antiqua" size="12.0" />
-               </font>
-            </Button>
             <TextField fx:id="tf_flightid" GridPane.columnIndex="1" />
             <TextField fx:id="tf_fromcity" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="tf_capacity" GridPane.columnIndex="3" />
             <TextField fx:id="tf_tocity" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <DatePicker GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextField fx:id="dp_depart" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="dp_arrive" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <GridPane hgap="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.60003662109375" minWidth="10.0" prefWidth="105.60003662109375" />
@@ -80,8 +74,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="tf_id_delete" promptText="Flight ID" />
-                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefWidth="54.0" text="Delete" GridPane.columnIndex="1" />
+                  <Button fx:id="button_delete" mnemonicParsing="false" onAction="#delete" prefWidth="54.0" text="Delete" />
+                  <Button fx:id="button_add" mnemonicParsing="false" onAction="#add" text="Add" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="Book Antiqua" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </GridPane>
             <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" text="Log Out" GridPane.columnIndex="3" GridPane.rowIndex="3">
@@ -89,6 +87,17 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
+            <TextField fx:id="tf_id_delete" promptText="Flight ID" GridPane.rowIndex="3" />
+            <Label fx:id="label_add_message" textFill="#0fd319" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+            </Label>
+            <Label fx:id="label_delete_message" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
