--- a/Flights/src/gui/Admin.fxml
+++ b/Flights/src/gui/Admin.fxml
@@ -24,6 +24,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -82,22 +83,36 @@
                   </Button>
                </children>
             </GridPane>
-            <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" text="Log Out" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Book Antiqua" size="12.0" />
-               </font>
-            </Button>
             <TextField fx:id="tf_id_delete" promptText="Flight ID" GridPane.rowIndex="3" />
             <Label fx:id="label_add_message" textFill="#0fd319" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="25.0" />
-               </font>
-            </Label>
-            <Label fx:id="label_delete_message" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
+            <Label fx:id="label_delete_message" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="22.0" />
+               </font>
+            </Label>
+            <GridPane GridPane.columnIndex="3" GridPane.rowIndex="4">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="button_back" mnemonicParsing="false" onAction="#back" prefHeight="23.0" prefWidth="88.0" text="Log Out" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Book Antiqua" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+            <Button fx:id="button_refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="89.0" text="REFRESH" GridPane.columnIndex="3" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
