--- a/Flights/src/gui/Account.fxml
+++ b/Flights/src/gui/Account.fxml
@@ -58,7 +58,8 @@
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="flightId" promptText="Flight ID" GridPane.columnIndex="2" />
+                  <TextField fx:id="IdText" promptText="Flight ID" GridPane.columnIndex="2" />
+                  <Label fx:id="message" text="  " GridPane.columnIndex="4" />
                </children>
             </GridPane>
             <Label text="Your Flights" translateX="110.0" GridPane.columnIndex="1">
