--- a/Flights/src/gui/AdminSearches.fxml
+++ b/Flights/src/gui/AdminSearches.fxml
@@ -1,8 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchController">
+   <children>
+      <GridPane hgap="5.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="546.3999633789062" minWidth="10.0" prefWidth="518.2000244140625" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="291.20001220703125" minWidth="10.0" prefWidth="60.5999755859375" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="128.59998168945313" minHeight="10.0" prefHeight="50.400018310546876" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="339.1999816894531" minHeight="10.0" prefHeight="339.1999816894531" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <GridPane hgap="2.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="fromText" promptText="From" />
+                  <TextField fx:id="toText" promptText="To" GridPane.columnIndex="2" />
+                  <TextField fx:id="departText" promptText="MM/DD/YYYY Depart" GridPane.columnIndex="1" />
+                  <TextField fx:id="arriveText" promptText="MM/DD/YYYY Arrive" GridPane.columnIndex="3" />
+               </children>
+            </GridPane>
+            <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="button_account" mnemonicParsing="false" onAction="#goToAdmin" text="Go to Admin Page" textAlignment="CENTER" translateY="50.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="button_logout" mnemonicParsing="false" onAction="#logout" text="Log Out" textAlignment="CENTER" translateY="-50.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Book Antiqua" size="12.0" />
+               </font>
+            </Button>
+            <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <columns>
+                <TableColumn fx:id="idColumn" prefWidth="57.599976897239685" text="Flight ID" />
+                  <TableColumn fx:id="fromCityColumn" prefWidth="88.00000762939453" text="City" />
+                  <TableColumn fx:id="departDateColumn" prefWidth="71.20001220703125" text="Date" />
+                <TableColumn fx:id="departTimeColumn" prefWidth="68.79998779296875" text="Time" />
+                  <TableColumn fx:id="toCityColumn" prefWidth="75.0" text="City" />
+                  <TableColumn fx:id="arriveDateColumn" prefWidth="70.4000244140625" text="Date" />
+                  <TableColumn fx:id="arriveTimeColumn" prefWidth="84.0000061035156" text=" Time" />
+               </columns>
+            </TableView>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" />
+         </padding>
+      </GridPane>
+   </children>
+</StackPane>
