--- a/Flights/src/gui/Searches.fxml
+++ b/Flights/src/gui/Searches.fxml
@@ -13,7 +13,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchController">
    <children>
-      <GridPane>
+      <GridPane hgap="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="546.3999633789062" minWidth="10.0" prefWidth="518.2000244140625" />
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="291.20001220703125" minWidth="10.0" prefWidth="60.5999755859375" />
@@ -51,7 +51,7 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="button_logout" mnemonicParsing="false" onAction="#logout" text="Log Out" translateY="-50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="button_logout" mnemonicParsing="false" onAction="#logout" text="Log Out" textAlignment="CENTER" translateY="-50.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
@@ -87,7 +87,7 @@
             </TableView>
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" />
+            <Insets bottom="10.0" left="10.0" right="5.0" />
          </padding>
       </GridPane>
    </children>
