--- a/Flights/src/gui/Searches.fxml
+++ b/Flights/src/gui/Searches.fxml
@@ -14,7 +14,7 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: powderblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SearchController">
    <children>
-      <GridPane>
+      <GridPane hgap="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="546.3999633789062" minWidth="10.0" prefWidth="518.2000244140625" />
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="291.20001220703125" minWidth="10.0" prefWidth="60.5999755859375" />
@@ -23,7 +23,6 @@
           <RowConstraints maxHeight="128.59998168945313" minHeight="10.0" prefHeight="31.60000381469726" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="297.60001449584956" minHeight="10.0" prefHeight="292.7999961853027" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane hgap="2.0">
@@ -40,7 +39,7 @@
                   <TextField fx:id="fromText" promptText="From" />
                   <TextField fx:id="toText" promptText="To" GridPane.columnIndex="2" />
                   <TextField fx:id="departText" promptText="MM/DD/YYYY Depart" GridPane.columnIndex="1" />
-                  <TextField promptText="MM/DD/YYYY Arrive" GridPane.columnIndex="3" />
+                  <TextField fx:id="arriveText" promptText="MM/DD/YYYY Arrive" GridPane.columnIndex="3" />
                </children>
             </GridPane>
             <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="1">
@@ -53,7 +52,7 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="button_logout" mnemonicParsing="false" onAction="#logout" text="Log Out" translateY="-50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="button_logout" mnemonicParsing="false" onAction="#logout" text="Log Out" textAlignment="CENTER" translateY="-50.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Book Antiqua" size="12.0" />
                </font>
@@ -68,32 +67,33 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="tf_flight" prefHeight="26.0" prefWidth="141.0" promptText="Flight ID" GridPane.columnIndex="1" />
+                  <TextField fx:id="idText" prefHeight="26.0" prefWidth="141.0" promptText="Flight ID" GridPane.columnIndex="1" />
                   <Button mnemonicParsing="false" text="Add" GridPane.columnIndex="2">
                      <font>
                         <Font name="Book Antiqua" size="12.0" />
                      </font>
                   </Button>
+                  <Label fx:id="label_flight_message" textFill="#01c91f">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
                </children>
             </GridPane>
             <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <columns>
                 <TableColumn fx:id="idColumn" prefWidth="57.599976897239685" text="Flight ID" />
-                  <TableColumn fx:id="toCityColumn" prefWidth="76.79999542236328" text="City" />
-                  <TableColumn fx:id="arriveDateColumn" prefWidth="82.4000244140625" text="Arrive Date" />
-                  <TableColumn fx:id="arriveTimeColumn" prefWidth="81.59996032714844" text="Arrive Time" />
-                  <TableColumn fx:id="departDateColumn" prefWidth="82.39996337890625" text="Depart Date" />
-                <TableColumn fx:id="departTimeColumn" prefWidth="83.20004272460938" text="Depart Time" />
+                  <TableColumn fx:id="fromCityColumn" prefWidth="88.00000762939453" text="City" />
+                  <TableColumn fx:id="departDateColumn" prefWidth="71.20001220703125" text="Date" />
+                <TableColumn fx:id="departTimeColumn" prefWidth="68.79998779296875" text="Time" />
+                  <TableColumn fx:id="toCityColumn" prefWidth="75.0" text="City" />
+                  <TableColumn fx:id="arriveDateColumn" prefWidth="70.4000244140625" text="Date" />
+                  <TableColumn fx:id="arriveTimeColumn" prefWidth="84.0000061035156" text=" Time" />
                </columns>
             </TableView>
-            <Label fx:id="label_flight_message" textFill="#17d002" GridPane.rowIndex="3">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" />
+            <Insets bottom="10.0" left="10.0" right="5.0" />
          </padding>
       </GridPane>
    </children>
