--- a/Flights/src/gui/AdminSearches.fxml
+++ b/Flights/src/gui/AdminSearches.fxml
@@ -26,18 +26,14 @@
             <GridPane hgap="2.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="fromText" promptText="From" />
-                  <TextField fx:id="toText" promptText="To" GridPane.columnIndex="2" />
-                  <TextField fx:id="departText" promptText="MM/DD/YYYY Depart" GridPane.columnIndex="1" />
-                  <TextField fx:id="arriveText" promptText="MM/DD/YYYY Arrive" GridPane.columnIndex="3" />
+                  <TextField fx:id="cityText" promptText="City" />
+                  <TextField fx:id="dateText" promptText="MM/DD/YYYY" GridPane.columnIndex="1" />
                </children>
             </GridPane>
             <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="1">
