--- a/Flights/src/gui/Account.fxml
+++ b/Flights/src/gui/Account.fxml
@@ -17,8 +17,8 @@
       <GridPane hgap="10.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="92.79998779296875" minWidth="10.0" prefWidth="64.79998779296875" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="439.2000122070312" minWidth="10.0" prefWidth="430.40001220703124" />
-          <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="353.20001220703125" minWidth="10.0" prefWidth="63.599975585937614" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="487.0" minWidth="10.0" prefWidth="438.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="353.20001220703125" minWidth="8.0" prefWidth="57.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="95.60001220703126" minHeight="0.0" prefHeight="40.60001831054687" vgrow="SOMETIMES" />
@@ -36,7 +36,7 @@
                   <Font name="Book Antiqua" size="12.0" />
                </font>
             </Button>
-            <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane hgap="5.0" prefHeight="34.0" prefWidth="469.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.600048828125" minWidth="10.0" prefWidth="63.400000000000006" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.20001220703125" minWidth="10.0" prefWidth="93.8" />
@@ -59,7 +59,10 @@
                      </font>
                   </Button>
                   <TextField fx:id="IdText" promptText="Flight ID" GridPane.columnIndex="2" />
-                  <Label fx:id="message" text="  " GridPane.columnIndex="4" />
+                  <Label fx:id="label_message" text="  " GridPane.columnIndex="4">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
                </children>
             </GridPane>
             <Label text="Your Flights" translateX="110.0" GridPane.columnIndex="1">
